--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "proyectou7",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
@@ -12,22 +12,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+
   "dependencies": {
-    "@prisma/client": "^4.9.0",
-    "@types/express": "^4.17.15",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "^18.11.18",
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "prisma": "^4.9.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  },
-  "devDependencies": {
+    "@prisma/client": "4.9.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "dotenv": "16.0.3",
+    "express": "4.18.2",
+    "jsonwebtoken": "^9.0.0"
+  },
+
+  "devDependencies": {
+    "@types/express": "4.17.15",
+    "@types/node": "18.11.18",
     "concurrently": "^7.6.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "2.0.20",
+    "prisma": "4.9.0",
+    "ts-node": "10.9.1",
+    "tslib": "2.4.1",
+    "typescript": "4.9.4"
   }
 }
